--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body ng-controller="StoreController as store">
@@ -25,35 +26,9 @@
                 <em class="pull-right">{{product.price | currency}}</em>
             </h3>
             <!-- Image Gallery  -->
-            <div class='gallery' ng-show="product.images.length" ng-controller="GalleryController as gallery">
-                <img class="img img-circle img-thumbnail center-block" ng-src="{{product.images[gallery.current]}}" />
-                <ul class="clearfix">
-                    <li class="small-image pull-left thumbnail" ng-repeat="image in product.images"> <img ng-src="{{image}}" /> </li>
-                </ul>
-            </div>
-
-            <section class="tab" ng-controller="TabController as tab">
-                <ul class="nav nav-pills">
-                    <li ng-class="{active : tab.isSet(1)}">
-                        <a href ng-click="tab.setTab(1)">Description</a></li>
-                    <li ng-class="{active : tab.isSet(2)}">
-                        <a href ng-click="tab.setTab(2)">Specs</a></li>
-                    <li ng-class="{active : tab.isSet(3)}">
-                        <a href ng-click="tab.setTab(3)">Reviews</a></li>
-                </ul>
-                <div ng-show="tab.isSet(1)">
-                    <h4>Description</h4>
-                    <blockquote>{{product.description}}</blockquote>
-                </div>
-                <div ng-show="tab.isSet(2)">
-                    <h4>Specs</h4>
-                    <blockquote>Shine: {{product.shine}}</blockquote>
-                </div>
-                <div ng-show="tab.isSet(3)">
-                    <h4>Reviews</h4>
-                    <blockquote></blockquote>
-                </div>
-            </section>
+            <product-gallery></product-gallery>
+            <!-- Product tabs -->
+            <product-tabs class="tab"></product-tabs>
 
             <button ng-show="product.canPurchase">Add to cart</button>
         </div>
