--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,6 @@
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/products.js"></script>
 </body>
 </html>
